--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/puertoricoOSM.jpg" alt="" />
+							<img src="images/uscvsucla.jpg" alt="" />
 						</div>
 					</section>
 				<!-- Three -->
