--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 				<section class="banner style1 orient-left content-align-left image-position-center fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>USC Map-a-thon</h1>
-							<p>Welcome! This is the digital hub for USC Map-a-thon events.</P> 
+							<p>Join us November 15th from 10am to 1:30pm at at the Polymathic Innovation Lab on the 3rd Floor of Leavey Library for a special humanitarian mapa-a-thon event. We will join forces (and compete!) with UCLA as we learn more about OSM (Open Street Map) and work on a project that needs urgent mapping.</P> 
+					<p>When: Wednesday November 15th, 2017</P
+					<p>Where: Polymathic Innovation Lab, 3rd Floor of Leavey Library</>
 								
 							<ul class="actions vertical">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
