--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 						<div class="content">
 							<h1>USC Map-a-thon</h1>
 							<p>Join us November 15th from 10am to 1:30pm at at the Polymathic Innovation Lab on the 3rd Floor of Leavey Library for a special humanitarian mapa-a-thon event. We will join forces (and compete!) with UCLA as we learn more about OSM (Open Street Map) and work on a project that needs urgent mapping.</P> 
-					<p>When: Wednesday November 15th, 2017</P
-					<p>Where: Polymathic Innovation Lab, 3rd Floor of Leavey Library</>
-								
+					<p>When: Wednesday November 15th, 2017</P>
+					<p>Where: Polymathic Innovation Lab, 3rd Floor of Leavey Library</p>
+				<p> </p>
 							<ul class="actions vertical">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
+								<li><a href="#About" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
 						</div>
 						<div class="image">
