--- a/index.html
+++ b/index.html
@@ -134,7 +134,19 @@
 							</div>
 
 					</section>
+<!-- Seven -->
+			<section class="banner style1 orient-right content-align-right image-position-center fullscreen onload-image-fade-in onload-content-fade-left">
+						<div class="content">
+							<h1>About</h1>
+							<p>name and descriptions</P>
 			
+							<ul class="actions vertical">
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/puertoricoOSM.jpg"/>
+						</div>
+					</section>
 
 			
 				<!-- Footer -->
