--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 					<p>Where: Polymathic Innovation Lab, 3rd Floor of Leavey Library</p>
 				<p> </p>
 							<ul class="actions vertical">
-								<li><a href="#About" class="button big wide smooth-scroll-middle">Get Started</a></li>
+								<li><a href="#About" class="button small smooth-scroll-left">About</a></li>
+								<li><a href="#About" class="button small smooth-scroll-right">Tutorials</a></li>
 							</ul>
 						</div>
 						<div class="image">
