--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 				<p> </p>
 							<ul class="actions vertical">
 								<li><a href="#About" class="button small smooth-scroll-left">About</a></li>
+
+							</ul>
+				<ul class="actions vertical">
+		
 								<li><a href="#About" class="button small smooth-scroll-right">Tutorials</a></li>
 							</ul>
 						</div>
