--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 					<p>Where: Polymathic Innovation Lab, 3rd Floor of Leavey Library</p>
 				<p> </p>
 							<ul class="actions vertical">
-								<li><a href="#About" class="button small smooth-scroll-left">About</a></li>
+								<li><a href="#About" class="button small">About</a></li>
 
 		
-								<li><a href="#About" class="button small smooth-scroll-right">Tutorials</a></li>
+								<li><a href="#About" class="button small">Tutorials</a></li>
 							</ul>
 						</div>
 						<div class="image">
