--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<p>When: Wednesday November 15th, 2017</P>
 					<p>Where: Polymathic Innovation Lab, 3rd Floor of Leavey Library</p>
 				<p> </p>
-							<ul class="actions vertical">
+							<ul class="actions small">
 								<li><a href="#About" class="button small">About</a></li>
 
 		
