--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 				<!-- One -->
 				
-				<section class="banner style2 fullscreen color2 content-align-center image-position-center fullscreen onload-image-fade-in onload-content-fade-center">
+				<section class="banner style2 fullscreen content-align-center image-position-center fullscreen onload-image-fade-in onload-content-fade-center">
 						<div class="content">
 							<ul class="actions small">
 								<li><a href="#About" class="button small">About</a></li>
