--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						</div>
 					</section>
 			<!-- Two -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in"><p><a name="About"></a>About</p>
 						<div class="content">
 							<h2>The next map-a-thon info</h2>
 							<p>stuff, place, time, etc</p>
@@ -49,12 +49,8 @@
 							<img src="images/uscvsucla.jpg" alt="" />
 						</div>
 					</section>
-				<!-- Three -->
-				<section class="banner style1 align-center">
-						<p><a name="About"></a>About</p>
-						
-					</section>
-		<!-- Four -->
+			
+		<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in"><p><a name="Tutorials"></a>Tutorials</p>
 						<div class="content">
 							<h2>Instructions maybe?</h2>
@@ -67,7 +63,7 @@
 					</section>
 	
 
-				<!-- Five -->
+				<!-- Four -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Photos from Map-a-thons</h2>
