--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 								<li><a href="#Tutorials" class="button small">Tutorials</a></li>
 							</ul>
 							<h1>USC Map-a-thon</h1>
+							<img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/Map-A-Thon%20Flyer%20v3.jpg" alt="Map-a-thon">
 							<p>Join us November 15th from 10am to 1:30pm at at the Polymathic Innovation Lab on the 3rd Floor of Leavey Library for a special humanitarian mapa-a-thon event. We will join forces (and compete!) with UCLA as we learn more about OSM (Open Street Map) and work on a project that needs urgent mapping.</P> 
 					<p>When: Wednesday November 15th, 2017</P>
 					<p>Where: Polymathic Innovation Lab, 3rd Floor of Leavey Library</p>
