--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<section class="banner style2 fullscreen content-align-center image-position-center fullscreen onload-image-fade-in onload-content-fade-center">
 						<div class="content">
 							<ul class="actions small">
-								<li><a href="#About" class="button small">About</a></li>
+								<li><a href="#The next map-a-thon info" class="button small">About</a></li>
 
 		
 								<li><a href="#Tutorials" class="button small">Tutorials</a></li>
@@ -39,7 +39,7 @@
 						</div>
 					</section>
 			<!-- Two -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in"><p><a name="About"></a>About</p>
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in"><p>
 						<div class="content">
 							<h2>The next map-a-thon info</h2>
 							<p>stuff, place, time, etc</p>
