--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<section class="banner style2 fullscreen content-align-center image-position-center fullscreen onload-image-fade-in onload-content-fade-center">
 						<div class="content">
 							<ul class="actions small">
-								<li><a href="#The next map-a-thon info" class="button small">About</a></li>
+								<li><a href="#stuff, place, time, etc" class="button small">About</a></li>
 
 		
 								<li><a href="#Tutorials" class="button small">Tutorials</a></li>
