--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						</div>
 					</section>
 			<!-- Two -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in"><p>
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>The next map-a-thon info</h2>
 							<p>stuff, place, time, etc</p>
