--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<section class="banner style2 fullscreen content-align-center image-position-center fullscreen onload-image-fade-in onload-content-fade-center">
 						<div class="content">
 							<ul class="actions small">
-								<li><a href="#stuff, place, time, etc" class="button small">About</a></li>
+								<li><a href="#about" class="button small">About</a></li>
 
 		
 								<li><a href="#Tutorials" class="button small">Tutorials</a></li>
@@ -41,9 +41,9 @@
 			<!-- Two -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>The next map-a-thon info</h2>
+							<h2> id="about">The next map-a-thon info</h2>
 							<p>stuff, place, time, etc</p>
-							<ul class="actions vertical">
+							<ul>class="actions vertical">
 							</ul>
 						</div>
 						<div class="image">
