--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						</div>
 					</section>
 			<!-- Two -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in"><a name="about"></a> 
 						<div class="content">
 							<h2> id="about">The next map-a-thon info</h2>
 							<p>stuff, place, time, etc</p>
