--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<!-- Two -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in"><a name="about"></a> 
 						<div class="content">
-							<h2> id="about">The next map-a-thon info</h2>
+							<h2>The next map-a-thon info</h2>
 							<p>stuff, place, time, etc</p>
 							<ul>class="actions vertical">
 							</ul>
