--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 								<li><a href="#Tutorials" class="button small">Tutorials</a></li>
 							</ul>
 							<h1>USC Map-a-thon</h1>
-							<img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/Map-A-Thon%20Flyer%20v3.jpg" alt="Map-a-thon" width="300" height="300">
+							<img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/Mapathon%20Flyer%20Final.jpg" width="500" height="400">
 							<p>Join us November 15th from 10am to 1:30pm at at the Polymathic Innovation Lab on the 3rd Floor of Leavey Library for a special humanitarian mapa-a-thon event. We will join forces (and compete!) with UCLA as we learn more about OSM (Open Street Map) and work on a project that needs urgent mapping.</P> 
 					<p>When: Wednesday November 15th, 2017</P>
 					<p>Where: Polymathic Innovation Lab, 3rd Floor of Leavey Library</p>
@@ -41,8 +41,8 @@
 			<!-- Two -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in"><a name="about"></a> 
 						<div class="content">
-							<h2>The next map-a-thon info</h2>
-							<p>stuff, place, time, etc</p>
+							<h2>The USC Map-a-thon Committee is a group of students and faculty interested in humanitarian mapping.</h2>
+							<p></p>
 							<ul>class="actions vertical">
 							</ul>
 						</div>
