--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<a href="images/gallery/fulls/01.jpg" class="image">
-										<img src="images/gallery/thumbs/01.jpg" alt="" />
+									<a href="images/gallery/fulls/mapathon1.jpg" class="image">
+										<img src="images/gallery/fulls/mapathon1.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3></h3>
@@ -86,8 +86,8 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.jpg" class="image">
-										<img src="images/gallery/thumbs/02.jpg" alt="" />
+									<a href="images/gallery/fulls/mapathon2.jpg" class="image">
+										<img src="images/gallery/fulls/mapathon2.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3></h3>
@@ -98,8 +98,8 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/03.jpg" class="image">
-										<img src="images/gallery/thumbs/03.jpg" alt="" />
+									<a href="images/gallery/fulls/mapathon3.jpg" class="image">
+										<img src="images/gallery/fulls/mapathon3.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3></h3>
@@ -110,8 +110,8 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/04.jpg" class="image">
-										<img src="images/gallery/thumbs/04.jpg" alt="" />
+									<a href="images/gallery/fulls/mapathon4.jpg" class="image">
+										<img src="images/gallery/fulls/mapathon4.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3></h3>
