--- a/index.html
+++ b/index.html
@@ -28,30 +28,18 @@
 							</ul>
 							<h1>USC Map-a-thon</h1>
 							<img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/Mapathon%20Flyer%20Final.jpg" width="500" height="400">
-							<p>Join us November 15th from 10am to 1:30pm at at the Polymathic Innovation Lab on the 3rd Floor of Leavey Library for a special humanitarian mapa-a-thon event. We will join forces (and compete!) with UCLA as we learn more about OSM (Open Street Map) and work on a project that needs urgent mapping.</P> 
+							<p>Join us November 15th from 10am to 1:30pm at at the Polymathic Innovation Lab on the 3rd Floor of Leavey Library for a special humanitarian map-a-thon event. We will join forces (and compete!) with UCLA as we learn more about OSM (Open Street Map), Missing Maps, and work on a project that needs urgent mapping.</P> 
 					<p>When: Wednesday November 15th, 2017</P>
 					<p>Where: Polymathic Innovation Lab, 3rd Floor of Leavey Library</p>
-				<p> </p>
+				        <p>Food will be provided!!</p>
 							
 						</div>
 						<div class="image">
 							<img src="images/puertoricoOSM.jpg"/>
 						</div>
 					</section>
-			<!-- Two -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in"><a name="about"></a> 
-						<div class="content">
-							<h2>The USC Map-a-thon Committee is a group of students and faculty interested in humanitarian mapping.</h2>
-							<p></p>
-							<ul>class="actions vertical">
-							</ul>
-						</div>
-						<div class="image">
-							<img src="images/uscvsucla.jpg" alt="" />
-						</div>
-					</section>
 			
-		<!-- Three -->
+		<!-- Two -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in"><p><a name="Tutorials"></a>Tutorials</p>
 						<div class="content">
 							<h2>Instructions maybe?</h2>
@@ -64,7 +52,7 @@
 					</section>
 	
 
-				<!-- Four -->
+				<!-- Three -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Photos from Map-a-thons</h2>
@@ -126,10 +114,10 @@
 
 					</section>
 <!-- Seven -->
-			<section class="banner style1 orient-right content-align-right image-position-center fullscreen onload-image-fade-in onload-content-fade-left">
+			<section class="banner style1 orient-right content-align-right image-position-center fullscreen onload-image-fade-in onload-content-fade-left"><a name="about"></a> 
 						<div class="content">
-							<h1>About</h1>
-							<p>name and descriptions</P>
+							<h1>USC Map-a-thon Committee</h1>
+							<p></P>
 			
 							<ul class="actions vertical">
 							</ul>
@@ -138,8 +126,6 @@
 							<img src="images/puertoricoOSM.jpg"/>
 						</div>
 					</section>
-
-			
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
