--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <td class="tg-yw4l"></td>
   </tr>
   <tr>
-    <td class="tg-yw4l">Andy Rutkowski</td>
+    <td class="tg-yw4l">Andy Rutkowski is the Visualization Librarian at USC Libraries. He is interested in how mapping and spatial thinking can have an impact on a wide range of issues, including social justice, sustainability, and public policy.</td>
     <td class="tg-yw4l"></td>
   </tr>
 </table>
