--- a/index.html
+++ b/index.html
@@ -118,51 +118,55 @@
 						<div class="content">
 							<h1>USC Map-a-thon Committee</h1>
 							<style type="text/css">
-.tg  {border-collapse:collapse;border-spacing:0;}
-.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
-.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
-.tg .tg-yw4l{vertical-align:top}
+.tg  {border-collapse:collapse;border-spacing:0;border:none;}
+.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;}
+.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;}
+.tg .tg-baqh{text-align:center;vertical-align:top}
 </style>
-<table class="tg">
+<table class="tg" style="undefined;table-layout: fixed; width: 446px">
+<colgroup>
+<col style="width: 110px">
+<col style="width: 336px">
+</colgroup>
   <tr>
-    <th class="tg-yw4l">Name</th>
-    <th class="tg-yw4l"></th>
+    <th class="tg-baqh">Name</th>
+    <th class="tg-baqh"></th>
   </tr>
   <tr>
-    <td class="tg-yw4l">Name</td>
-    <td class="tg-yw4l"></td>
+    <td class="tg-baqh">Name</td>
+    <td class="tg-baqh"></td>
   </tr>
   <tr>
-    <td class="tg-yw4l">Name</td>
-    <td class="tg-yw4l"></td>
+    <td class="tg-baqh">Name</td>
+    <td class="tg-baqh"></td>
   </tr>
   <tr>
-    <td class="tg-yw4l">Name</td>
-    <td class="tg-yw4l"></td>
+    <td class="tg-baqh">Name</td>
+    <td class="tg-baqh"></td>
   </tr>
   <tr>
-    <td class="tg-yw4l">Name</td>
-    <td class="tg-yw4l"></td>
+    <td class="tg-baqh">Name</td>
+    <td class="tg-baqh"></td>
   </tr>
   <tr>
-    <td class="tg-yw4l">Name</td>
-    <td class="tg-yw4l"></td>
+    <td class="tg-baqh">Name</td>
+    <td class="tg-baqh"></td>
   </tr>
   <tr>
-    <td class="tg-yw4l">Name</td>
-    <td class="tg-yw4l"></td>
+    <td class="tg-baqh">Name</td>
+    <td class="tg-baqh"></td>
   </tr>
   <tr>
-    <td class="tg-yw4l">Name</td>
-    <td class="tg-yw4l"></td>
+    <td class="tg-baqh">Name</td>
+    <td class="tg-baqh"></td>
   </tr>
   <tr>
-    <td class="tg-yw4l">Name</td>
-    <td class="tg-yw4l"></td>
+    <td class="tg-baqh">Name</td>
+    <td class="tg-baqh"></td>
   </tr>
   <tr>
-    <td class="tg-yw4l">Andy Rutkowski is the Visualization Librarian at USC Libraries. He is interested in how mapping and spatial thinking can have an impact on a wide range of issues, including social justice, sustainability, and public policy.</td>
-    <td class="tg-yw4l"></td>
+    <td class="tg-baqh">Andy Rutkowski is the Visualization Librarian at USC Libraries. He is interested in how mapping and spatial thinking can have an impact on a wide range of issues, including social justice, sustainability, and public policy.</td>
+    <td class="tg-baqh"><img src="images/AR.jpg"/></td>
   </tr>
 </table>
 			
