--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   </tr>
   <tr>
     <td class="tg-baqh">Andy Rutkowski is the Visualization Librarian at USC Libraries. He is interested in how mapping and spatial thinking can have an impact on a wide range of issues, including social justice, sustainability, and public policy.</td>
-    <td class="tg-baqh"><img src="images/AR.jpg"/></td>
+    <td class="tg-baqh"><img src="images/AR.JPG"/></td>
   </tr>
 </table>
 			
