--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 .tg  {border-collapse:collapse;border-spacing:0;border:none;}
 .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;}
 .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;}
-.tg .tg-baqh{text-align:center;vertical-align:top}
+.tg .tg-baqh{text-align:left;vertical-align:top}
 </style>
 <table class="tg" style="undefined;table-layout: fixed; width: 446px">
 <colgroup>
@@ -166,7 +166,7 @@
   </tr>
   <tr>
     <td class="tg-baqh">Andy Rutkowski is the Visualization Librarian at USC Libraries. He is interested in how mapping and spatial thinking can have an impact on a wide range of issues, including social justice, sustainability, and public policy.</td>
-    <td class="tg-baqh"><img src="images/AR.JPG"/></td>
+    <td class="tg-baqh"><<img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/AR.JPG" width="150" height="150">/></td>
   </tr>
 </table>
 			
