--- a/index.html
+++ b/index.html
@@ -117,6 +117,11 @@
 			<section class="banner style1 orient-right content-align-right image-position-center fullscreen onload-image-fade-in onload-content-fade-left"><a name="about"></a> 
 						<div class="content">
 							<h1>USC Map-a-thon Committee</h1>
+<!-- Eight -->	
+							<section class="wrapper style1 align-center">
+						<div class="inner">
+							
+						
 							<style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;border:none;}
 .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;}
@@ -170,13 +175,7 @@
     <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/AR.JPG" width="200" height="200"></td>
   </tr>
 </table>
-			
-							<ul class="actions vertical">
-							</ul>
-						</div>
-						<div class="image">
-							<img src="images/puertoricoOSM.jpg"/>
-						</div>
+							</div>
 					</section>
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
