--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
 								<li><a href="#Tutorials" class="button small">Tutorials</a></li>
 							</ul>
 							<h1>USC Map-a-thon</h1>
-							<img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/Mapathon%20Flyer%20Final.jpg" width="500" height="400">
+							<p><a href="https://goo.gl/forms/VcTi6tG874gUvsdS2">RSVP!!!</a></p>
+							<img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/Mapathon%20Flyer%20Final.jpg" width="400" height="300">
 							<p>Join us November 15th from 10am to 1:30pm at at the Polymathic Innovation Lab on the 3rd Floor of Leavey Library for a special humanitarian map-a-thon event. We will join forces (and compete!) with UCLA as we learn more about OSM (Open Street Map), Missing Maps, and work on a project that needs urgent mapping.</P> 
 					<p>When: Wednesday November 15th, 2017</P>
 					<p>Where: Polymathic Innovation Lab, 3rd Floor of Leavey Library</p>
 				        <p>Food will be provided!!</p>
+				        <p><a href="https://goo.gl/forms/VcTi6tG874gUvsdS2">RSVP!!!</a></p>
 							
 						</div>
 						<div class="image">
