--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 		
 								<li><a href="#Tutorials" class="button small">Tutorials</a></li>
-							</ul><li><a href="https://goo.gl/forms/VcTi6tG874gUvsdS2" class="button small">RSVP!</a></li>
+							<li><a href="https://goo.gl/forms/VcTi6tG874gUvsdS2" class="button small">RSVP!</a></li>
 							</ul>
 							<h1>USC Map-a-thon</h1>				
 							<img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/Mapathon%20Flyer%20Final.jpg" width="400" height="300">
