--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							<li><a href="https://goo.gl/forms/VcTi6tG874gUvsdS2" class="button small">RSVP!</a></li>
 							</ul>
 							<h1>USC Map-a-thon</h1>				
-							<img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/Mapathon%20Flyer%20Final.jpg" width="400" height="300">
+							<img src="https://raw.githubusercontent.com/USCMapathon/mapathon/gh-pages/images/Mapathon%20Flyer.jpg" width="400" height="300">
 							<p>Join us November 15th from 10am to 1:30pm at at the Polymathic Innovation Lab on the 3rd Floor of Leavey Library for a special humanitarian map-a-thon event. We will join forces (and compete!) with UCLA as we learn more about OSM (Open Street Map), Missing Maps, and work on a project that needs urgent mapping.</P> 
 					<p>When: Wednesday November 15th, 2017</P>
 					<p>Where: Polymathic Innovation Lab, 3rd Floor of Leavey Library</p>
@@ -44,8 +44,8 @@
 		<!-- Two -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in"><p><a name="Tutorials"></a>Tutorials</p>
 						<div class="content">
-							<h2>Instructions maybe?</h2>
-							<p>text about instructions?</P>
+							<h2>Map-a-thon Toolkit</h2>
+							<p>Get an OSM account</P>
 							<ul class="actions vertical">
 						</div>
 						<div class="image">
