--- a/index.html
+++ b/index.html
@@ -136,41 +136,14 @@
 <col style="width: 395px">
 <col style="width: 336px">
 </colgroup>
+  
   <tr>
-    <th class="tg-baqh">Name</th>
-    <th class="tg-baqh"></th>
+    <td class="tg-baqh">Natalie Millstein is a senior Geodesign major with a minor in architecture. She enjoys investigating and evaluating ongoing change in the demographics and structures of urban environments. </td>
+    <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/blob/gh-pages/images/NM.jpg" width="200" height="200"></td>
   </tr>
   <tr>
-    <td class="tg-baqh">Name</td>
-    <td class="tg-baqh"></td>
-  </tr>
-  <tr>
-    <td class="tg-baqh">Name</td>
-    <td class="tg-baqh"></td>
-  </tr>
-  <tr>
-    <td class="tg-baqh">Name</td>
-    <td class="tg-baqh"></td>
-  </tr>
-  <tr>
-    <td class="tg-baqh">Name</td>
-    <td class="tg-baqh"></td>
-  </tr>
-  <tr>
-    <td class="tg-baqh">Name</td>
-    <td class="tg-baqh"></td>
-  </tr>
-  <tr>
-    <td class="tg-baqh">Name</td>
-    <td class="tg-baqh"></td>
-  </tr>
-  <tr>
-    <td class="tg-baqh">Name</td>
-    <td class="tg-baqh"></td>
-  </tr>
-  <tr>
-    <td class="tg-baqh">Name</td>
-    <td class="tg-baqh"></td>
+    <td class="tg-baqh">Alex Chen is a senior studying GeoDesign and public health.  He is interested in spatial analysis, disease surveillance, urban epidemiology, COER, and health policy, using GIS as an applied statistical method. </td>
+    <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/blob/gh-pages/images/AC.jpg" width="200" height="200"></td>
   </tr>
   <tr>
     <td class="tg-baqh">Andy Rutkowski is the Visualization Librarian at USC Libraries. He is interested in how mapping and spatial thinking can have an impact on a wide range of issues, including social justice, sustainability, and public policy.</td>
