--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 							<h1>USC Map-a-thon</h1>				
 							<img src="https://raw.githubusercontent.com/USCMapathon/mapathon/gh-pages/images/Mapathon%20Flyer.jpg" width="450" height="350">
 							<p>Join us November 15th from 10am to 1:30pm at at the Polymathic Innovation Lab on the 3rd Floor of Leavey Library for a special humanitarian map-a-thon event. We will join forces (and compete!) with UCLA as we learn more about OSM (Open Street Map), Missing Maps, and work on a project that needs urgent mapping.</P> 
-					<p><b>When: Wednesday November 15th, 2017</b></P>
-				        <p><b>Where: Polymathic Innovation Lab, 3rd Floor of Leavey Library</b></p>
-				        <p><b>Food will be provided!!</></p>
-				        <p><b><a href="https://goo.gl/forms/VcTi6tG874gUvsdS2">RSVP!!!</a></b></p>
+					<p><b>When: Wednesday November 15th, 2017</b><br>
+				        <b>Where: Polymathic Innovation Lab, 3rd Floor of Leavey Library</b><br>
+				        <b>Food will be provided!!</><br>
+				        <b><a href="https://goo.gl/forms/VcTi6tG874gUvsdS2">RSVP!!!</a></b></p>
 							
 						</div>
 						<div class="image">
