--- a/index.html
+++ b/index.html
@@ -42,11 +42,13 @@
 					</section>
 			
 		<!-- Two -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in"><p><a name="Tutorials"></a>Tutorials</p>
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in"><a name="Tutorials"></a> 
 						<div class="content">
 							<h2>Map-a-thon Toolkit</h2>
+							<h3>What to do before the Map-a-thon</h3>
 							<p>Get an <a href="https://www.openstreetmap.org/user/new">OSM account</a></P>
-							<ul class="actions vertical">
+						<h3>What to expect on the Map-a-thon day?</h3>
+						<p>Volunteers will help you get started or answer any questions you have.</p>
 						</div>
 						<div class="image">
 							<img src="images/puertoricoOSM.jpg" alt="" />
