--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<h3>What to do before the Map-a-thon</h3>
 							<p>Get an <a href="https://www.openstreetmap.org/user/new">OSM account</a></P>
 						<h3>What to expect once the Map-a-thon begins?</h3>
-						<p>We will have a project picked by Missing Maps from the HOT OSM Tasking Manager. This project will be in critical need of mapping. We will be mapping with (and against) UCLA!. The more you know and have set-up before (see instructions above!) you get here the faster you can get to mapping. We will be giving brief tutorials/workshops to get people up to speed and we will have volunteers on hand to get you started and answer questions</p><p>As we map we will have a leaderboard showing our progress against UCLA. In addition we will have a live feed so we can say hello and see how are counterparts are doing</p>.
+						<p>We will have a project picked by Missing Maps from the HOT OSM Tasking Manager. This project will be in critical need of mapping. We will be mapping with (and against) UCLA! The more you know and have set-up before (see instructions above!) you get here the faster you can get to mapping. We will be giving brief tutorials/workshops to get people up to speed and we will have volunteers on hand to get you started and answer questions</p><p>As we map we will have a leaderboard showing our progress against UCLA. In addition we will have a live feed so we can say hello and see how are counterparts are doing</p>.
 						</div>
 						<div class="image">
 							<img src="images/puertoricoOSM.jpg" alt="" />
