--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 										<img src="images/gallery/fulls/mapathon1.jpg" alt="" />
 									</a>
 							<div class="caption">
- -										<h3></h3>
- -										<p> </p>
- -										<ul class="actions">
- -											<li><span class="button small">Details</span></li>
- -										</ul>
+ 										<h3></h3>
+ 										<p> </p>
+ 										<ul class="actions">
+ 											<li><span class="button small">Details</span></li>
+ 										</ul>
 									</div>
 								</article>
 								<article>
@@ -82,33 +82,33 @@
 										<img src="images/gallery/fulls/mapathon2.jpg" alt="" />
 									</a>
 									<div class="caption">
- -										<h3></h3>
- -										<p> </p>
- -										<ul class="actions">
- -											<li><span class="button small">Details</span></li>
- -										</ul>
+ 										<h3></h3>
+ 										<p> </p>
+ 										<ul class="actions">
+ 											<li><span class="button small">Details</span></li>
+ 										</ul>
 								</article>
 								<article>
 									<a href="images/gallery/fulls/mapathon4.jpg" class="image">
 										<img src="images/gallery/fulls/mapathon4.jpg" alt="" />
 									</a>
 									<div class="caption">
- -										<h3></h3>
- -										<p> </p>
- -										<ul class="actions">
- -											<li><span class="button small">Details</span></li>
- -										</ul>
+ 										<h3></h3>
+ 										<p> </p>
+										<ul class="actions">
+ 											<li><span class="button small">Details</span></li>
+ 										</ul>
 								</article>
 								<article>
 									<a href="images/gallery/fulls/mapathon5.jpg" class="image">
 										<img src="images/gallery/fulls/mapathon5.jpg" alt="" />
 									</a>
 									<div class="caption">
- -										<h3></h3>
- -										<p> </p>
- -										<ul class="actions">
- -											<li><span class="button small">Details</span></li>
- -										</ul>
+ 										<h3></h3>
+ 										<p> </p>
+ 										<ul class="actions">
+ 											<li><span class="button small">Details</span></li>
+ 										</ul>
 								</article>
 					
 								<article>
@@ -116,11 +116,11 @@
 										<img src="images/gallery/fulls/mapathon7.jpg" alt="" />
 									</a>
 									<div class="caption">
- -										<h3></h3>
- -										<p> </p>
- -										<ul class="actions">
- -											<li><span class="button small">Details</span></li>
- -										</ul>
+ 										<h3></h3>
+ 										<p> </p>
+ 										<ul class="actions">
+ 											<li><span class="button small">Details</span></li>
+ 										</ul>
 								</article>
 								
 							</div>
