--- a/index.html
+++ b/index.html
@@ -160,6 +160,30 @@
     <td class="tg-baqh">Andy Rutkowski is the Visualization Librarian at USC Libraries. He is interested in how mapping and spatial thinking can have an impact on a wide range of issues, including social justice, sustainability, and public policy.</td>
     <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/AR.JPG" width="250" height="200"></td>
   </tr>
+	<td class="tg-baqh">Christian Lanec Relleve is a student of the USC School of Architecture minoring in HSGI (Human Security and Global Intelligence). He is interested in understanding territorial studies, defense infrastructures and the utilization to solve complex contextual problems using architecture.
+</td>
+    <td class="tg-baqh"></td>
+  </tr>
+							<td class="tg-baqh">Rebekkah Castellanos
+</td>
+    <td class="tg-baqh"></td>
+  </tr>
+								<td class="tg-baqh">Karen Grewar</td>
+    <td class="tg-baqh"></td>
+  </tr>
+							<td class="tg-baqh">Gabriela Noriega</td>
+    <td class="tg-baqh"></td>
+  </tr>
+				<td class="tg-baqh">Precious Nwaoha</td>
+    <td class="tg-baqh"></td>
+  </tr>
+									<td class="tg-baqh">Abriannah Aiken</td>
+    <td class="tg-baqh"></td>
+  </tr>
+																		<td class="tg-baqh">Seung Won Ha</td>
+    <td class="tg-baqh"></td>
+  </tr>
+									
 </table>
 							</div>
 					</section>
