--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 <!-- Seven -->
 			<section class="banner style1 orient-right content-align-right image-position-center fullscreen onload-image-fade-in onload-content-fade-left"><a name="about"></a> 
 						<div class="content">
-							<h1>USC Map-a-thon Committee</h1>
+							<h1>USC Map-a-thon Team</h1>
 <!-- Eight -->	
 							<section class="wrapper style1 align-center">
 						<div class="inner">
