--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							</ul>
 							<h1>USC Map-a-thon</h1>				
 							<img src="https://raw.githubusercontent.com/USCMapathon/mapathon/gh-pages/images/Mapathon%20Flyer.jpg" width="450" height="350">
-							<p>Join us November 15th from 10am to 1:30pm at at the Polymathic Innovation Lab on the 3rd Floor of Leavey Library for a special humanitarian map-a-thon event. We will join forces (and compete!) with UCLA as we learn more about < a href="https://www.openstreetmap.org/" OSM (Open Street Map)</a>, <a href="http://www.missingmaps.org/" Missing Maps</a>, and work on a project that needs urgent mapping.</P> 
+							<p>Join us November 15th from 10am to 1:30pm at at the Polymathic Innovation Lab on the 3rd Floor of Leavey Library for a special humanitarian map-a-thon event. We will join forces (and compete!) with UCLA as we learn more about Open Street Map, Missing Maps, and work on a project that needs urgent mapping.</P> 
 					<p><b>When: Wednesday November 15th, 2017</b><br>
 				        <b>Where: Polymathic Innovation Lab, 3rd Floor of Leavey Library</b><br>
 				        <b>Food will be provided!!</><br>
