--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 				<section class="banner style2 fullscreen content-align-center image-position-center fullscreen onload-image-fade-in onload-content-fade-center">
 						<div class="content">
 							<ul class="actions small">
-								<li><a href="#about" class="button small">About</a></li>
+								<li><a href="#who" class="button small">Who</a></li>
+								
 
 		
 								<li><a href="#Tutorials" class="button small">Tutorials</a></li>
@@ -127,11 +128,13 @@
 							</div>
 
 					</section>
-<!-- Seven -->
-			<section class="banner style1 orient-right content-align-right image-position-center fullscreen onload-image-fade-in onload-content-fade-left"><a name="about"></a> 
+<!-- Four -->
+
+<!-- Five -->
+			<section class="banner style1 orient-right content-align-right image-position-center fullscreen onload-image-fade-in onload-content-fade-left"><a name="who"></a> 
 						<div class="content">
 							<h1>USC Map-a-thon Team</h1>
-<!-- Eight -->	
+<!-- Six -->	
 							<section class="wrapper style1 align-center">
 						<div class="inner">
 							
