--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 								
 
 		
-								<li><a href="#Tutorials" class="button small">Tutorials</a></li>
+								<li><a href="#Toolkit" class="button small">Toolkit</a></li>
 							<li><a href="https://goo.gl/forms/VcTi6tG874gUvsdS2" class="button small">RSVP!</a></li>
 							</ul>
 							<h1>USC Map-a-thon</h1>				
@@ -43,7 +43,7 @@
 					</section>
 			
 		<!-- Two -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in"><a name="Tutorials"></a> 
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in"><a name="Toolkit"></a> 
 						<div class="content">
 							<h2>Map-a-thon Toolkit</h2>
 							<h3>What to do before the Map-a-thon</h3>
