--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				        <b>Where: Polymathic Innovation Lab, 3rd Floor of Leavey Library</b><br>
 				        <b>Food will be provided!!</><br>
 				        <b><a href="https://goo.gl/forms/VcTi6tG874gUvsdS2">RSVP!!!</a></b></p>
-							
+					<b><a href="https://ucla.zoom.us/j/705475990">Join us remotely!</a>If you can't make it in person you can still participate and even join us via Zoom.</b></p>		
 						</div>
 						<div class="image">
 							<img src="images/puertoricoOSM.jpg"/>
