--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
 							<p>Join us November 15th from 10am to 1:30pm at at the Polymathic Innovation Lab on the 3rd Floor of Leavey Library for a special humanitarian map-a-thon event. We will join forces (and compete!) with UCLA as we learn more about Open Street Map, Missing Maps, and work on a project that needs urgent mapping.</P> 
 					<p><b>When: Wednesday November 15th, 2017</b><br>
 				        <b>Where: Polymathic Innovation Lab, 3rd Floor of Leavey Library</b><br>
+					<b>Remote Participants:<a href="https://ucla.zoom.us/j/705475990">Join us via Zoom!</a>Online room will be open starting at 9:30am</b></p>	
 				        <b>Food will be provided!!</><br>
 				        <b><a href="https://goo.gl/forms/VcTi6tG874gUvsdS2">RSVP!!!</a></b></p>
-					<b><a href="https://ucla.zoom.us/j/705475990">Join us remotely!</a>If you can't make it in person you can still participate and even join us via Zoom.</b></p>		
+						
 						</div>
 						<div class="image">
 							<img src="images/puertoricoOSM.jpg"/>
