--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
 							<p>Join us November 15th from 10am to 1:30pm at at the Polymathic Innovation Lab on the 3rd Floor of Leavey Library for a special humanitarian map-a-thon event. We will join forces (and compete!) with UCLA as we learn more about Open Street Map, Missing Maps, and work on a project that needs urgent mapping.</P> 
 					<p><b>When: Wednesday November 15th, 2017</b><br>
 				        <b>Where: Polymathic Innovation Lab, 3rd Floor of Leavey Library</b><br>
-						<b>Remote Participants: <a href="https://ucla.zoom.us/j/705475990">Join us via Zoom!</a></b></p>
-						<p>Online room will be open starting at 9:30am</p>	
-				        <b>Food will be provided!!</><br>
-				        <b><a href="https://goo.gl/forms/VcTi6tG874gUvsdS2">RSVP!!!</a></b></p>
+						<b>Remote Participants: <a href="https://ucla.zoom.us/j/705475990">Join us via Zoom!</a></b> Online room will be open starting at 9:30am.</p>	
+				        <b>Food will be provided!</><br>
+				        <b><a href="https://goo.gl/forms/VcTi6tG874gUvsdS2">Please RSVP!!!</a></b></p>
 						
 						</div>
 						<div class="image">
@@ -52,6 +51,7 @@
 							<p>Get an <a href="https://www.openstreetmap.org/user/new">OSM account</a></P>
 						        <p><a href="http://tasks.hotosm.org/learn">Watch some videos</a> on how to use the task manager in Open Street Map.</p> 
 						<h3>What to expect once the Map-a-thon begins?</h3>
+						<p>If you are off-site please log-in to the <a href="https://ucla.zoom.us/j/705475990">Battle of Maps virtual room.</a> For those participating virtually please try do the tutorials beforehand! It will be difficult to provide hands on help but we will definitely try!</p>
 						<p>We will have a project picked from the HOTOSM website. This project will be in need of mapping.</p><p>We will be mapping with (and against) UCLA!</p><p>The more you know and have set-up before (see instructions above!) you get here the faster you can get to mapping. We will be giving brief tutorials/workshops to get people up to speed and we will have volunteers on hand to get you started and answer questions</p><p>As we map we will have a leaderboard showing our progress against UCLA. In addition we will have a live feed so we can say hello and see how are counterparts are doing</p>.
 						</div>
 						<div class="image">
