--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 							<p>Get an <a href="https://www.openstreetmap.org/user/new">OSM account</a></P>
 						        <p><a href="http://tasks.hotosm.org/learn">Watch some videos</a> on how to use the task manager in Open Street Map.</p> 
 						<h3>What to expect once the Map-a-thon begins?</h3>
-						<p>If you are off-site please log-in to the <a href="https://ucla.zoom.us/j/705475990">Battle of Maps virtual room.</a> For those participating virtually please try do the tutorials beforehand! It will be difficult to provide hands on help but we will definitely try!</p>
+						<p>If you are off-site please log-in to the <a href="https://ucla.zoom.us/j/705475990">Battle of Maps virtual room.</a></p> 
+							<p>For those participating virtually please try do the tutorials beforehand! It will be difficult to provide hands on help but we will definitely try!</p>
 						<p>We will have a project picked from the HOTOSM website. This project will be in need of mapping.</p><p>We will be mapping with (and against) UCLA!</p><p>The more you know and have set-up before (see instructions above!) you get here the faster you can get to mapping. We will be giving brief tutorials/workshops to get people up to speed and we will have volunteers on hand to get you started and answer questions</p><p>As we map we will have a leaderboard showing our progress against UCLA. In addition we will have a live feed so we can say hello and see how are counterparts are doing</p>.
 						</div>
 						<div class="image">
