--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 						<div class="content">
 							<h2>Map-a-thon Toolkit</h2>
 							<h3>What to do before the Map-a-thon</h3>
-							<p>Get an <a href="https://www.openstreetmap.org/user/new">OSM account</a></P>
-						        <p><a href="http://tasks.hotosm.org/learn">Watch some videos</a> on how to use the task manager in Open Street Map.</p> 
+							<li>Get an <a href="https://www.openstreetmap.org/user/new">OSM account</a></li>
+						        <li><a href="http://tasks.hotosm.org/learn">Watch some videos</a> on how to use the task manager in Open Street Map.</li> 
 						<h3>What to expect once the Map-a-thon begins?</h3>
 						<p>If you are off-site please log-in to the <a href="https://ucla.zoom.us/j/705475990">Battle of Maps virtual room.</a></p> 
 							<p>For those participating virtually please try to do the tutorials beforehand! It will be difficult to provide hands on help but we will definitely try!</p>
