--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 							<p>For those participating virtually please try to do the tutorials beforehand! It will be difficult to provide hands on help but we will definitely try!</p>
 						<p>We will have a project picked from the HOTOSM website. This project will be in need of mapping. We will be mapping with (and against) UCLA! The more you know and have set-up before (see instructions above!) you get here the faster you can get to mapping. We will be giving brief tutorials/workshops to get people up to speed and we will have volunteers on hand to get you started and answer questions. As we map we will have a leaderboard showing our progress against UCLA. In addition we will have a live feed so we can say hello and see how are counterparts are doing.</p>
 						<ul style="list-style-type:disc">
-							<li>Schedule</li>
-  <li>10:00-10:15 - Introductions and basic tutorial</li>
+							<li><strong>Schedule</strong></li>
+  <li>10:00-10:15 - Intro, say hello to UCLA, and basic tutorial.</li>
   <li>10:15-12:00 - Mapping!</li>
-  <li>12:00-1:25 - Pizza and mapping!k</li>
-  <li>12:00-1:25 - Check in and announce the winnerk</li>
+  <li>12:00-1:25 - Pizza and mapping!</li>
+  <li>12:00-1:25 - Check in and announce the winner.</li>
 </ul>
 						</div>
 						<div class="image">
