--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <li>10:00-10:15 - Intro, say hello to UCLA, and basic tutorial.</li>
   <li>10:15-12:00 - Mapping!</li>
   <li>12:00-1:25 - Pizza and mapping!</li>
-  <li>1:25-1:30 Check in and announce the winner and thank you!</li>
+  <li>1:25-1:30 - Check-in with UCLA and announce the winner and thank yous!</li>
 </ul>
 						</div>
 						<div class="image">
