--- a/index.html
+++ b/index.html
@@ -49,12 +49,13 @@
 							<h2>Map-a-thon Toolkit</h2>
 							<h3>What to do before the Map-a-thon</h3>
 							<li>Get an <a href="https://www.openstreetmap.org/user/new">OSM account</a></li>
-						        <li><a href="http://tasks.hotosm.org/learn">Watch some videos</a> on how to use the task manager in Open Street Map.</li>
+							<li><a href="http://slides.com/arutkows/battleofthemaps#/">This is the slideshow</a> we will be using the day of the Ma-a-thon. If you can please go through it before you come!</li>
+							<li><a href="http://tasks.hotosm.org/learn">Watch some more videos</a> on how to use the task manager in Open Street Map.</li>
 							<p> </p>
 						<h3>What to expect once the Map-a-thon begins?</h3>
 						<p>If you are off-site please log-in to the <a href="https://ucla.zoom.us/j/705475990">Battle of Maps virtual room.</a></p> 
-							<p>For those participating virtually please try to do the tutorials beforehand! It will be difficult to provide hands on help but we will definitely try!</p>
-						<p>We will have a project picked from the HOTOSM website. This project will be in need of mapping. We will be mapping with (and against) UCLA! The more you know and have set-up before (see instructions above!) you get here the faster you can get to mapping. We will be giving brief tutorials/workshops to get people up to speed and we will have volunteers on hand to get you started and answer questions. As we map we will have a leaderboard showing our progress against UCLA. In addition we will have a live feed so we can say hello and see how are counterparts are doing.</p>
+							<p>For those participating virtually please go through the slideshow beforehand! It will be difficult to provide hands on help but we will definitely try!</p>
+						<p>We will be picking projects from the HOTOSM website. We will be giving brief tutorials/workshops to get people up to speed and we will have volunteers on hand to get you started and answer questions. As we map we will have a leaderboard showing our progress against UCLA. In addition we will have a live feed so we can say hello and see how are counterparts are doing.</p>
 						<ul style="list-style-type:disc">
 							<li><strong>Schedule</strong></li>
   <li>9:30-10:10 - Coffee/Donuts and registration.</li>
