--- a/index.html
+++ b/index.html
@@ -169,6 +169,10 @@
     <td class="tg-baqh">Natalie Millstein is a senior Geodesign major with a minor in architecture. She enjoys investigating and evaluating ongoing change in the demographics and structures of urban environments. </td>
     <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/NM.jpg" width="200" height="225"></td>
   </tr>
+		<tr>
+				<td class="tg-baqh">Precious Nwaoha is a Cognitive Science student in her final year. She is passionate about using data, technology, and people power to positively impact the world. </td>
+    <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/PN.jpg" width="200" height="200"></td>
+  </tr>
   <tr>
     <td class="tg-baqh">Alex Chen is a senior studying GeoDesign and public health.  He is interested in spatial analysis, disease surveillance, urban epidemiology, COER, and health policy, using GIS as an applied statistical method. </td>
     <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/AC.jpg" width="200" height="200"></td>
@@ -191,9 +195,7 @@
 							<td class="tg-baqh">Gabriela Noriega</td>
     <td class="tg-baqh"></td>
   </tr>
-				<td class="tg-baqh">Precious Nwaoha</td>
-    <td class="tg-baqh"></td>
-  </tr>
+			
 									<td class="tg-baqh">Abriannah Aiken</td>
     <td class="tg-baqh"></td>
   </tr>
