--- a/index.html
+++ b/index.html
@@ -177,7 +177,10 @@
     <td class="tg-baqh">Alex Chen is a senior studying GeoDesign and public health.  He is interested in spatial analysis, disease surveillance, urban epidemiology, COER, and health policy, using GIS as an applied statistical method. </td>
     <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/AC.jpg" width="200" height="200"></td>
   </tr>
-  <tr>
+<tr>										<td class="tg-baqh">Abriannah Aiken is a 2nd year Architecture student minoring in Archaeology. She enjoys encouraging others to understand the complexities and injustices in the world and use privilege to create global impacts!</td>
+    <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/AA.JPG" width="250" height="200"></td>
+  </tr>
+	<tr>
     <td class="tg-baqh">Andy Rutkowski is the Visualization Librarian at USC Libraries. He is interested in how mapping and spatial thinking can have an impact on a wide range of issues, including social justice, sustainability, and public policy.</td>
     <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/AR.JPG" width="250" height="200"></td>
   </tr>
@@ -196,9 +199,7 @@
     <td class="tg-baqh"></td>
   </tr>
 			
-									<td class="tg-baqh">Abriannah Aiken</td>
-    <td class="tg-baqh"></td>
-  </tr>
+
 																		<td class="tg-baqh">Seung Won Ha</td>
     <td class="tg-baqh"></td>
   </tr>
