--- a/index.html
+++ b/index.html
@@ -183,25 +183,14 @@
 <tr>										<td class="tg-baqh">Abriannah Aiken is a 2nd year Architecture student minoring in Archaeology. She enjoys encouraging others to understand the complexities and injustices in the world and use privilege to create global impacts!</td>
     <td class="tg-baqh"><img src="https://raw.githubusercontent.com/USCMapathon/mapathon/gh-pages/images/AA.jpg" width="190" height="225"></td>
   </tr>
-	
+	<tr>
 	<td class="tg-baqh">Christian Lanec Relleve is a student of the USC School of Architecture minoring in HSGI (Human Security and Global Intelligence). He is interested in understanding territorial studies, defense infrastructures and the utilization to solve complex contextual problems using architecture.
 </td>
-    <td class="tg-baqh"></td>
+    <td class="tg-baqh"><img src="https://raw.githubusercontent.com/USCMapathon/mapathon/gh-pages/images/CLR.jpg" width="175" height="175"></td>
   </tr>
-							<td class="tg-baqh">Rebekkah Castellanos
+							<td class="tg-baqh">Additional thanks to students Rebekkah Castellanos, Karen Grewar, Gabriela Noriega, and Seung Won Ha. Thanks to Karen Howell and Rachelle Smith in Leavey Library. Extra special thanks to Curtis Fletcher and the Polymathic Lab for providing the space and food for the event. Big thanks to our friends at UCLA - Yoh Kawano, Zoe Borovsky, Albert Kochaphum, Dawn Childress, Anthony Caldwell, and James Walker. Lastly, big thank you to the Open Street Map Community and Missing Maps! And, of course, you!
 </td>
-    <td class="tg-baqh"></td>
-  </tr>
-								<td class="tg-baqh">Karen Grewar</td>
-    <td class="tg-baqh"></td>
-  </tr>
-							<td class="tg-baqh">Gabriela Noriega</td>
-    <td class="tg-baqh"></td>
-  </tr>
-			
-
-																		<td class="tg-baqh">Seung Won Ha</td>
-    <td class="tg-baqh"></td>
+    <td class="tg-baqh"><img src="https://raw.githubusercontent.com/USCMapathon/mapathon/gh-pages/images/MM.jpg" width="300" height="250"></td>
   </tr>
 									
 </table>
